# VisualCode

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
src/: Catalog.cpp  Catalog.h  ImageProcessor.cpp  ImageProcessor.h  Preset.cpp  Preset.h  main.cpp
